--- a/src/sv/com/pereira/gui/Contribuyentes.form
+++ b/src/sv/com/pereira/gui/Contribuyentes.form
@@ -7,25 +7,25 @@
         <Property name="persistenceUnit" type="java.lang.String" value="ContadorPU"/>
       </Properties>
     </Component>
-    <Component class="javax.persistence.Query" name="empresasQuery">
+    <Component class="javax.swing.ButtonGroup" name="grupoTipoVtas">
+    </Component>
+    <Component class="javax.persistence.Query" name="clientesQuery">
       <Properties>
-        <Property name="query" type="java.lang.String" value="SELECT e FROM Empresas e"/>
+        <Property name="query" type="java.lang.String" value="SELECT c FROM Clientes c"/>
         <Property name="entityManager" type="java.lang.Object" editor="org.netbeans.modules.form.j2ee.J2EEPropertyModifier$EMProperty$EntityManagerEditor">
           <ComponentRef name="ContadorPUEntityManager"/>
         </Property>
       </Properties>
     </Component>
-    <Component class="java.util.List" name="empresasList">
+    <Component class="java.util.List" name="clientesList">
       <Properties>
         <Property name="query" type="java.lang.Object" editor="org.netbeans.modules.form.j2ee.J2EEPropertyModifier$QueryBeanProperty$QueryEditor">
-          <ComponentRef name="empresasQuery"/>
+          <ComponentRef name="clientesQuery"/>
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;pojos.Empresas&gt;"/>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;pojos.Clientes&gt;"/>
       </AuxValues>
-    </Component>
-    <Component class="javax.swing.ButtonGroup" name="grupoTipoVtas">
     </Component>
   </NonVisualComponents>
   <Properties>
@@ -41,7 +41,7 @@
     <Property name="iconifiable" type="boolean" value="true"/>
     <Property name="maximizable" type="boolean" value="true"/>
     <Property name="resizable" type="boolean" value="true"/>
-    <Property name="title" type="java.lang.String" value="** Empresas**"/>
+    <Property name="title" type="java.lang.String" value="** Contribuyentes**"/>
     <Property name="toolTipText" type="java.lang.String" value=""/>
     <Property name="autoscrolls" type="boolean" value="true"/>
     <Property name="selected" type="boolean" value="true"/>
@@ -126,7 +126,7 @@
           <Color blue="ff" green="0" red="0" type="rgb"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="Empresas"/>
+        <Property name="text" type="java.lang.String" value="Contribuyentes"/>
         <Property name="toolTipText" type="java.lang.String" value=""/>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.EtchedBorderInfo">
@@ -148,7 +148,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTable" name="tablaEmpresas">
+        <Component class="javax.swing.JTable" name="tablaContribuyentes">
           <Properties>
             <Property name="autoCreateRowSorter" type="boolean" value="true"/>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -190,42 +190,30 @@
             </Property>
           </Properties>
           <BindingProperties>
-            <BindingProperty name="elements" source="empresasList" target="tablaEmpresas" targetPath="elements" updateStrategy="0" immediately="true">
-              <Subbinding sourcePath="${idempresa}">
-                <BindingParameter name="NAME" value="Idemp"/>
+            <BindingProperty name="elements" source="clientesList" target="tablaContribuyentes" targetPath="elements" updateStrategy="0" immediately="true">
+              <Subbinding sourcePath="${idclien}">
                 <BindingParameter name="javax.swing.binding.ParameterKeys.COLUMN_CLASS" value="Integer.class"/>
-                <BindingParameter name="javax.swing.binding.ParameterKeys.EDITABLE" value="false"/>
               </Subbinding>
               <Subbinding sourcePath="${nombre}">
-                <BindingParameter name="NAME" value="Nombre"/>
                 <BindingParameter name="javax.swing.binding.ParameterKeys.COLUMN_CLASS" value="String.class"/>
-                <BindingParameter name="javax.swing.binding.ParameterKeys.EDITABLE" value="false"/>
               </Subbinding>
               <Subbinding sourcePath="${giro}">
-                <BindingParameter name="NAME" value="Giro"/>
                 <BindingParameter name="javax.swing.binding.ParameterKeys.COLUMN_CLASS" value="String.class"/>
-                <BindingParameter name="javax.swing.binding.ParameterKeys.EDITABLE" value="false"/>
               </Subbinding>
-              <Subbinding sourcePath="${ncr}">
-                <BindingParameter name="NAME" value="Ncr"/>
+              <Subbinding sourcePath="${nrc}">
                 <BindingParameter name="javax.swing.binding.ParameterKeys.COLUMN_CLASS" value="String.class"/>
-                <BindingParameter name="javax.swing.binding.ParameterKeys.EDITABLE" value="false"/>
               </Subbinding>
               <Subbinding sourcePath="${nit}">
-                <BindingParameter name="NAME" value="NIT"/>
                 <BindingParameter name="javax.swing.binding.ParameterKeys.COLUMN_CLASS" value="String.class"/>
-                <BindingParameter name="javax.swing.binding.ParameterKeys.EDITABLE" value="false"/>
               </Subbinding>
               <Subbinding sourcePath="${gcontrib}">
-                <BindingParameter name="NAME" value="G.Cont"/>
                 <BindingParameter name="javax.swing.binding.ParameterKeys.COLUMN_CLASS" value="Boolean.class"/>
-                <BindingParameter name="javax.swing.binding.ParameterKeys.EDITABLE" value="false"/>
               </Subbinding>
             </BindingProperty>
           </BindingProperties>
           <Events>
-            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tablaEmpresasMouseClicked"/>
-            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tablaEmpresasKeyPressed"/>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tablaContribuyentesMouseClicked"/>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tablaContribuyentesKeyPressed"/>
           </Events>
         </Component>
       </SubComponents>
@@ -242,7 +230,7 @@
           <Color blue="33" green="0" red="99" type="rgb"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="Empresas"/>
+        <Property name="text" type="java.lang.String" value="Contribuyentes"/>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.BevelBorderInfo">
             <BevelBorder/>
@@ -434,7 +422,7 @@
             <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
               <ComponentRef name="grupoTipoVtas"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Nueva"/>
+            <Property name="text" type="java.lang.String" value="Nuevo"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rbNuevaActionPerformed"/>
